# Protected-file-analyzer-docker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.he.md  README.md  SECURITY.md  compose.build.yaml  compose.yaml  install.ps1  install.sh  pyproject.toml
.github/workflows/: docker-release.yml  tests.yml
docker/: Dockerfile
scripts/: ensure-runtime-dirs.sh  pfactl.sh
src/protected_file_analyzer/: __main__.py  app.py  config.py  pipeline.py  recovery.py  runners.py  security.py  store.py  tool_probe.py  tool_worker.py  worker_daemon.py
src/protected_file_analyzer/rules/: basic_static.yar
src/protected_file_analyzer/static/: app.js  index.html  styles.css
tests/: conftest.py  test_app_api.py  test_app_reveal.py  test_findings_cards.py  test_live_e2e.py  test_no_password_leak.py  test_pipeline.py  test_recovery_inputs.py  test_release_hygiene.py  test_runners.py  test_runtime_setup_script.py  test_security.py  test_tool_probe.py  test_ui_static.py  test_wordlist_providers.py  test_worker_daemon.py  test_xlsx_e2e.py  test_xlsx_fixture.py
tests/fixtures/: protected-sample.xlsx
