[build-system]
requires = ["setuptools==75.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protected-file-analyzer"
version = "0.1.0"
description = "Portable Dockerized protected-file analysis gateway"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Hermes Agent"}]
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "aiofiles==24.1.0",
  "httpx==0.28.1",
  "python-magic==0.4.27",
  "msoffcrypto-tool==5.4.2",
  "pikepdf==9.10.2",
  "py7zr==0.22.0",
  "pyzipper==0.3.6",
  "python-multipart==0.0.20",
  "oletools==0.60.2",
  "pdfid==1.1.3",
  "packaging==25.0",
  "XlsxWriter==3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.4",
]

[project.scripts]
protected-file-analyzer-worker = "protected_file_analyzer.worker_daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
protected_file_analyzer = ["static/*", "rules/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
